sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: type mismatch;
 found   : Int
 required: Boolean
      if (!plusPetitQue(j,v) && !ecritV && j){
                                           ^AlgInsertionSort:11: error: type mismatch;
 found   : Int
 required: Boolean
      } else if (!ecritV&&j){
                          ^